examples/datalog/14_aggregations/41_count_distinct_group.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_cd_group
Knowledge graph 'test_cd_group' created.
Switched to knowledge graph: test_cd_group
> .kg use test_cd_group
Switched to knowledge graph: test_cd_group
> +sales[(1, "North", "Widget"), (2, "North", "Gadget"), (3, "North", "Widget"), (4, "South", "Widget")].
Inserted 4 fact(s) into 'sales'.
> +distinct_by_region(Region, <COUNT_DISTINCT:Product>) :- sales(_, Region, Product).
Script error: Parse error: Invalid term: '<COUNT_DISTINCT:Product>'
